compiler/testData/diagnostics/quick/shadowing/ShadowVariableInNestedBlock.jet
fun ff(): Int {
    var i = 1
    {
        val <!NAME_SHADOWING!>i<!> = 2
    }
    return i
}
